demos/01-hello-world/output/devops/gke/hello-world-site-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: demo-hello-world
  name: hello-world-deployment
spec:
  selector:
    matchLabels:
      purpose: deploy-hello-world
  replicas: 1
  template:
    metadata:
      labels:
        purpose: deploy-hello-world
    spec:
      containers:
      - name: hello-world-site
        image: gcr.io/galvanic-wall-235207/demo-hello-world
